Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1198

"UTF16" is not recognized as "UTF-16"

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 2.5.0
    • 2.6.0
    • Utilities
    • None
    • All platforms.

    Description

      "UTF16" is not recognized as an alternative name of "UTF-16".

      I confirmed that 5 versions of "UTF-16" encoding names including "UTF16" are defined in XMLUni.cpp, but in TransService.cpp, only 4 versions are implemented, and "UTF16" is ignored.

      Here's the patch for Xerces-C++ to recognize "UTF16" as "UTF-16".

      — TransService.cpp.orig Thu Jan 29 20:48:46 2004
      +++ TransService.cpp Thu Apr 15 22:45:29 2004
      @@ -457,6 +457,15 @@
      );
      gMappings->put
      (
      + (void*)XMLUni::fgUTF16EncodingString5,
      + new EEndianNameMapFor<XMLUTF16Transcoder>
      + (
      + XMLUni::fgUTF16EncodingString5
      + , false
      + )
      + );
      + gMappings->put
      + (
      (void*)XMLUni::fgUCS4EncodingString,
      new EEndianNameMapFor<XMLUCS4Transcoder>
      (

      Attachments

        Activity

          People

            Unassigned Unassigned
            smorino Shin'ya MORINO
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: