Add "UTF16" as a synonym for UTF-16 (bug #XERCESC-1198 - patch by Shin'ya MORINO)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@175880 13f79535-47bb-0310-9956-ffa450edef68